Update CatalogManagementSystem.java